# scim-waitzar

./: Makefile.am  ProjectHome.md  README  configure  configure.ac  local.conf
data/: Makefile.am
doc/: Makefile  Makefile.am  compile_guide.txt  custom_layer.xsl  titlepage.templates.xml  userconfig.xml  waitzar_users_guide.xml
ibus-waitzar/: AUTHORS  Makefile.am  NEWS  README  SConstruct  autogen.sh  configure.ac  waitzar.xml
ibus-waitzar/engine/: SConscript  engine.py
ibus-waitzar/engine/libwz/: __init__.py  _libwz.py
release-0.0.1/: override.txt  scim-waitzar_0.0.1.dsc  scim-waitzar_0.0.1_i386.changes  scim-waitzar_0.0.1_i386.deb
scim-waitzar-0.0.1/: Makefile.in  README  configure.ac
scim-waitzar-0.0.1/debian/: README  changelog  control  copyright
scim-waitzar-0.0.1/src/: Makefile.in  scim_waitzar_imengine.cpp  scim_waitzar_imengine.h
scim-waitzar-1.0.0/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure
scim-waitzar-1.0.0/data/: Makefile.in
scim-waitzar-1.0.0/debian/: changelog  copyright  dirs  docs  rules  scim-waitzar-doc.docs  scim-waitzar.docs  scim-waitzar.install  watch
scim-waitzar-1.0.0/doc/: Makefile.in  config_parser.pl  userconfig.in.xml  waitzar_users_guide.xml  wz_styles.css
scim-waitzar-1.0.0/doc/fonts/: Makefile.am  Makefile.in  vera.xml
scim-waitzar-1.0.0/src/: Makefile.in  scim_waitzar_imengine.cpp  scim_waitzar_imengine_config.h  scim_waitzar_imengine_factory.cpp  scim_waitzar_imengine_factory.h  scim_waitzar_keymap.cpp  scim_waitzar_lookup_table.cpp
src/: Makefile.am  intl.h  scim_waitzar_imengine.cpp  scim_waitzar_imengine.h  scim_waitzar_imengine_setup.cpp  scim_waitzar_keymap.h  scim_waitzar_lookup_table.cpp  scim_waitzar_lookup_table.h
trunk/: ChangeLog  THANKS  WaitZar User Interface Specification.doc  chinese-debian-mini-howto.html  configure  configure.ac
trunk/doc/: Makefile.am  compile_guide.txt  config_parser.pl  custom_layer.xsl  userconfig.xml  waitzar_users_guide.xml
trunk/doc/fonts/: padauk.xml
trunk/doc/images/: Makefile.am
trunk/ibus-waitzar/: SConstruct  ibus-engine-waitzar  ibus-setup-waitzar  ibus-waitzar.spec
trunk/ibus-waitzar/engine/: Makefile.am  engine.py  factory.py  ibus-engine-waitzar  main.py  waitzar.py
trunk/ibus-waitzar/engine/libwz/: _libwz.py
trunk/scim-waitzar-0.0.1/: WaitZar_User_Guide.doc
trunk/scim-waitzar-0.0.1/data/: Makefile.in  config.txt
trunk/scim-waitzar-0.0.1/src/: scim_waitzar_imengine_factory.h  scim_waitzar_keymap.cpp
trunk/scim-waitzar-1.0.0/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  local.conf
trunk/scim-waitzar-1.0.0/data/: Makefile.in
trunk/scim-waitzar-1.0.0/debian/: control  copyright  rules  scim-waitzar-doc.install  scim-waitzar.install  watch
trunk/scim-waitzar-1.0.0/doc/: Makefile.in  custom_layer.xsl  images.tgz  imghead.html  titlepage.templates.xml  userconfig.in.xml  waitzar_users_guide.xml
trunk/scim-waitzar-1.0.0/doc/fonts/: Makefile.am  Makefile.in  myanmar3-bold.xml
trunk/scim-waitzar-1.0.0/doc/images/: Makefile.in
trunk/scim-waitzar-1.0.0/src/: Makefile.am  Makefile.in  scim_waitzar_imengine.h  scim_waitzar_imengine_setup.cpp  scim_waitzar_keymap.h
trunk/src/: Makefile.am  scim_waitzar_imengine.cpp  scim_waitzar_imengine.h  scim_waitzar_imengine_config.h  scim_waitzar_lookup_table.h
