imagedir=$(docdir)/images

image_DATA=	\
             console_rendering_glitch.png \
             rhymes_page_3.png \
             glitched_patsint_rendering.png \
             scim_screenshot_ubuntu.png \
             inline_ko.png \
             scim_setup_page1.png \
             inline_non.png \
             scim_setup_wz_tab.png \
             inline_on.png \
             specials_extra.png \
             inline_thar.png \
             specials_page_1.png \
             ko_first_sentence.png \
             specials_page_2.png \
             lookup_table_glitch.png \
             synaptic_loading_waitzar.png \
             note.png \
             table_example_onsetrhyme.png \
             open_office_glitch.png \
             table_onsets.png \
             output_encoding_choices.png \
             ubuntu_enabling_chinese.png \
             rhymes_page_1.png \
             wz_title.png \
             rhymes_page_2.png \
             zawgyi_rendering_kote.png


EXTRA_DIST = $(image_DATA)

